--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ To make it editable: contenteditable
   https://github.com/dusklight/javascript-react-2016/ )_
   - Presse *ESC* to see all the slides in *Overview* mode.
 
-  - This presentation itself is a JavaScript "app", using ReavelJS.
+  - This presentation itself is a JavaScript "app", using RevealJS.
   </aside>
 </section>
 
